--- a/4-portfolio-react/src/components/NavBar/index.css
+++ b/4-portfolio-react/src/components/NavBar/index.css
@@ -4,24 +4,25 @@
     border: solid 2px;
     background-color: rgba(4, 4, 4, 1);
 }
-.navbar .nav-container{
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
-    padding-right: 0.5rem;
-    color: white;
+
+.nav-logo{
+    width: 3rem;
+    height: 3rem;
 }
 
-.navbar-nav{
+.navbar .nav-container{
+    color: white;
+    width: 100%;
+}
+
+.tech-link{
     margin-right: 50rem;
 }
 
-.navbar-collapse{
-    padding-right: 2rem;
-}
-
-.nav-logo{
-    width: 1.7rem;
-    height: 1.7rem;
+.navbar-toggler{
+    background-color: antiquewhite ;
+    opacity: 0.75;
+    margin-right: 0.5rem;
 }
 
 .nav-link{
@@ -32,17 +33,34 @@
     color: beige !important;
 }
 
+.navbar-connect-btn{
+    background-color: antiquewhite ;
+    border: 0;
+    color: rgb(89, 86, 86);
+    font-size: 14px;
+}
 
-/* .navbar-text button {
-    font-weight: 700;
-    border: 1px solid #fff;
-    padding: 18px 34px;
-    font-size: 18px;
-    margin-left: 18px;
-    position: relative;
-    background-color: black;
-    transition: 0.3s ease-in-out;
-} */
+.icon{
+    width: 100vh;
+    height: 4%;
+    /* background-color: antiquewhite; */
+}
+
+svg g {
+    stroke: antiquewhite;
+    fill: antiquewhite;
+}
+
+svg{
+    padding-right: 5px;
+    width: 5vh !important;
+}
+
+.linkedin-icon{
+    margin-right: 3rem !important;
+}
+
+
 
 
 
